fixed (sort of) white space problem

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    // max-width: 100% !important;
 }
 
 html {
@@ -18,7 +19,8 @@ li {
 a {
     text-decoration: none;
 }
-.header{
+
+.header {
     background-color: #E2E8F0;
     border-bottom: 1px solid #E2E8F0;
     position: fixed;
@@ -34,6 +36,7 @@ a {
     position: fixed;
     width: 100%;
 }
+
 .hamburger {
     display: none;
 }
@@ -47,6 +50,7 @@ a {
     transition: all 0.3s ease-in-out;
     background-color: #101010;
 }
+
 .nav-menu {
     display: flex;
     justify-content: space-between;
@@ -57,13 +61,13 @@ a {
     margin-left: 5rem;
 }
 
-.nav-link{
+.nav-link {
     font-size: 1.6rem;
     font-weight: 400;
     color: #475569;
 }
 
-.nav-link:hover{
+.nav-link:hover {
     color: #482ff7;
 }
 
@@ -72,13 +76,14 @@ a {
     letter-spacing: 0.5rem;
     font-weight: 500;
     color: #000000;
-    &:hover{
+
+    &:hover {
         // transition: 0.5s ease-in;
         color: #482ff7;
     }
 }
 
-#home{
+#home {
     z-index: 1;
     min-width: 100%;
     background-color: #f72f2f;
@@ -86,18 +91,22 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    .home-container{
+
+    .home-container {
         position: relative;
         width: 50%;
-        .home-title{
+
+        .home-title {
             font-size: 3.5rem;
             margin: 10px 0;
         }
-        .home-subtitle{
+
+        .home-subtitle {
             font-size: 2.5rem;
             margin: 10px 0 15px 0;
         }
-        .home-btn{
+
+        .home-btn {
             background-color: #E2E8F0;
             color: #f72f2f;
             border: 1px solid #f72f2f;
@@ -110,7 +119,7 @@ a {
     }
 }
 
-#about{
+#about {
     color: #f1f1f1;
     padding: 50px 20px;
     min-height: 100vh;
@@ -118,26 +127,32 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    .about-container{
+
+    .about-container {
         position: relative;
         width: 50%;
-        .about-title{
+
+        .about-title {
             font-size: 3.5rem;
             margin: 10px 0;
         }
-        .about-subtitle{
+
+        .about-subtitle {
             font-size: 3.0rem;
             margin: 10px 0 15px 0;
-            a{
+
+            a {
                 color: #f72f2f;
                 text-decoration: none;
             }
         }
-        .about-para{
+
+        .about-para {
             font-size: 1.6rem;
             margin: 10px 0;
         }
-        .resume-btn{
+
+        .resume-btn {
             // background-color: #000000;
             color: #f1f1f1;
             border-bottom: 1px solid #000000;
@@ -146,17 +161,20 @@ a {
             font-weight: 500;
             border-radius: 5px;
             cursor: pointer;
-            a{
+
+            a {
                 color: #f72f2f;
             }
         }
     }
-    .about-avatar{
+
+    .about-avatar {
         margin-left: 10px;
         padding: 25px;
         border-radius: 50%;
         background-color: #f72f2f;
-        .about-avatar{
+
+        .about-avatar {
             width: 100%;
             height: 100%;
             border-radius: 50%;
@@ -164,7 +182,7 @@ a {
     }
 }
 
-#project{
+#project {
     padding: 50px 20px;
     min-height: 100vh;
     max-height: fit-content;
@@ -172,33 +190,38 @@ a {
     justify-content: center;
     align-items: center;
     background-color: #ffb5b5;
-    .project-container{
+
+    .project-container {
         position: relative;
         width: 50%;
-        .project-title{
+
+        .project-title {
             font-size: 3.5rem;
             margin: 10px 0;
         }
-        .project-subtitle{
+
+        .project-subtitle {
             font-size: 3.0rem;
             margin: 10px 0 15px 0;
         }
-        .project-grid{
+
+        .project-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             grid-gap: 20px;
             margin: 10px 0;
-            .project-item{
-                
-            }
+
+            .project-item {}
         }
     }
-    .project-avatar{
+
+    .project-avatar {
         margin-left: 10px;
         padding: 25px;
         border-radius: 50%;
         background-color: #f72f2f;
-        .project-avatar{
+
+        .project-avatar {
             width: 100%;
             height: 100%;
             border-radius: 50%;
@@ -207,6 +230,9 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
+    html{
+    width: 100vh;
+    }
     .nav-menu {
         z-index: 10;
         position: fixed;
@@ -246,25 +272,31 @@ a {
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
-    .home-image{
+
+    .home-image {
         display: none;
     }
-    .home-container{
+
+    .home-container {
         width: 100%;
 
     }
-    #home{
+
+    #home {
         height: 100vh;
     }
-    #about{
+
+    #about {
         flex-direction: column;
-        .about-container{
+
+        .about-container {
             width: 100%;
         }
-        .resume-btn{
+
+        .resume-btn {
             text-align: center;
-           background-color: #000000;
-           margin-bottom: 20px;
+            background-color: #000000;
+            margin-bottom: 20px;
         }
     }
 }
